<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/role_bg"
        android:focusable="auto">

        <TextView
            android:id="@+id/tv_registration"
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:gravity="center"
            android:text="@string/registration"
            android:textSize="30sp"
            app:fontFamily="@font/istok_web_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_nameAndSurname"
            android:layout_width="0dp"
            android:layout_height="30sp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:focusable="auto"
            android:hint="@string/name_and_surname"
            android:inputType="textPersonName"
            app:fontFamily="@font/istok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_registration" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="0dp"
            android:layout_height="30sp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:textSize="18sp"
            app:fontFamily="@font/istok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_nameAndSurname" />

        <EditText
            android:id="@+id/et_repeatEmail"
            android:layout_width="0dp"
            android:layout_height="30sp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/repeat_email"
            android:inputType="textEmailAddress"
            app:fontFamily="@font/istok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="30sp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:fontFamily="@font/istok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_repeatEmail" />

        <EditText
            android:id="@+id/et_repeatPassword"
            android:layout_width="0dp"
            android:layout_height="30sp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            app:fontFamily="@font/istok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <EditText
            android:id="@+id/et_phoneNumber"
            android:layout_width="0dp"
            android:layout_height="30sp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone"
            app:fontFamily="@font/istok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_repeatPassword" />

        <EditText
            android:id="@+id/et_companyName"
            android:layout_width="0dp"
            android:layout_height="30sp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/company_name"
            android:inputType="textPersonName"
            app:fontFamily="@font/istok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_phoneNumber" />

        <EditText
            android:id="@+id/et_organizationNumber"
            android:layout_width="0dp"
            android:layout_height="30sp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/organization_number"
            android:inputType="text"
            app:fontFamily="@font/istok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_companyName" />

        <EditText
            android:id="@+id/et_invoiceAddress"
            android:layout_width="0dp"
            android:layout_height="30sp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/invoice_address"
            android:inputType="textPersonName"
            app:fontFamily="@font/istok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_organizationNumber" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="#FF9800"
            android:text="@string/register"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:fontFamily="@font/istok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_invoiceAddress" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>